--- a/terraform_create_gcp_vm.yaml
+++ b/terraform_create_gcp_vm.yaml
@@ -124,12 +124,20 @@
 
 - name: "Example of postconfig"
   hosts: "{{service_file_path}}" 
+  gather_facts: off
   tasks:
+    - name: Wait for ssh to come up
+      wait_for:
+        host: "{{ ansible_ssh_host }}" 
+        port: 22 
+        delay: 10  
+        timeout: 300
     - name: Install httpd
       dnf:
         name: httpd
         state: present
       become: true
+
     - name: Start httpd service
       ansible.builtin.service:
         name: httpd
