--- a/terraform_create_gcp_vm.yaml
+++ b/terraform_create_gcp_vm.yaml
@@ -127,10 +127,8 @@
   gather_facts: off
   tasks:
     - name: Wait for ssh to come up
-      wait_for:
-        host: "{{ ansible_ssh_host }}" 
-        port: 22 
-        delay: 1
+      ansible.builtin.wait_for_connection:
+        delay: 60
         timeout: 300
 
     - name: Install httpd
